# python-project-52

./: .dockerignore  .gitignore  Makefile  README.md  build.sh  db.sqlite3  dockerfile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: run_tests.yml
core/: mixins.py
included_apps/labels/: apps.py  base_models.py  models.py  views.py
included_apps/labels/migrations/: 0001_initial.py
included_apps/statuses/: apps.py  tests_statuses.py  views.py
included_apps/statuses/migrations/: 0001_initial.py
included_apps/tasks/: apps.py  filters.py  models.py  tests_tasks.py  views.py
included_apps/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py
included_apps/users/: apps.py  tests_users.py  views.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
task_manager/: asgi.py  helpers.py  mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_task.json  test_user.json  user.json
task_manager/included_apps/labels/: views.py
task_manager/included_apps/statuses/: views.py
task_manager/included_apps/tasks/: views.py
task_manager/labels/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py  urls.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py  urls.py  views.py
task_manager/tasks/migrations/: 0002_initial.py
task_manager/templates/: base.html  footer.html  index.html  navbar.html
task_manager/templates/components/: footer.html  navbar.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/tests/: tests_labels.py  tests_statuses.py  tests_tasks.py
task_manager/users/: admin.py  form.py  mixins.py  models.py  test_post.py  tests.py  urls.py  views.py
(+14 files in other folders)
