[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Myakot <cstepan@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "task_manager"}
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
django-admin = "^2.0.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
django-bootstrap4 = "^24.3"
coverage = "^7.3.2"
django-extensions = "^3.2.3"
django-filter = "^24.2"
rollbar = "^0.16.3"
django-bootstrap5 = "^24.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
